<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/first_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="number" />


    <EditText
        android:id="@+id/second_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="number2" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="14"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>